added notification of addition to storage

--- a/index.html
+++ b/index.html
@@ -29,54 +29,58 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <div class="row">
-        <h2 class="hour col-1">0900</h2>
-        <textarea class="col-10"></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="0900">
+        <h2 class="hour col-3 col-md-2 col-xl-1">0900</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1000</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1000">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1000</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1100</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1100">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1100</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1200</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1200">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1200</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1300</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1300">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1300</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1400</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1400">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1400</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1500</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1500">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1500</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1400</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1600">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1600</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
-      <div class="row">
-        <h2 class="hour col-1">1500</h2>
-        <textarea class='col-10'></textarea>
-        <button class="saveBtn col-1 fa fa-lock"></button>
+      <div class="row time-block" id="1700">
+        <h2 class="hour col-3 col-md-2 col-xl-1">1700</h2>
+        <textarea class="col-6 col-md-8 col-xl-10"></textarea>
+        <button class="saveBtn col-3 col-md-2 col-xl-1 fa fa-lock"></button>
       </div>
     </div>
+    <footer>
+      <h3>Have a great day!</h3>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
